concord_macros/tests/trybuild/fail/codegen_contract/reserved_stream_wrong_arity.rs
use concord_macros::api;

api! {
    client ReservedStreamWrongArityApi { base "https://example.com" }

    GET Download
        path ["download"]
        -> Stream
}

fn main() {}
